[MODEUS-197] Refactor file upload (#197)